SF Primes/src/objects/Trip_Report__c.object
<CustomObject>
    <fields>
        <fullName>Total_Metrics_at_Risk__c</fullName>
        <formula>IF(ISPICKVAL(Agenda_Signed_Off_Risk__c ,&quot;Yellow&quot;),1,0) + IF(ISPICKVAL(DCS_3rd_Party_Comm_Verified_Risk__c , &quot;Yellow&quot;),1,0) + IF(ISPICKVAL(Agenda_Signed_Off_Risk__c ,&quot;Red&quot;),1,0) + IF(ISPICKVAL(DCS_3rd_Party_Comm_Verified_Risk__c , &quot;Red&quot;),1,0) + IF(ISPICKVAL(Equipment_Verified_Risk__c , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL(Equipment_Verified_Risk__c , &quot;Red&quot;), 1,0) + IF(ISPICKVAL(Forms_Printers_Verified_Risk__c , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL(  Forms_Printers_Verified_Risk__c , &quot;Red&quot;), 1,0) + IF(ISPICKVAL(Manager_Training_Completed_Risk__c  , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL(Manager_Training_Completed_Risk__c  , &quot;Red&quot;), 1,0) + IF(ISPICKVAL(Setups_Verified_Risk__c , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL( Setups_Verified_Risk__c, &quot;Red&quot;), 1,0) + IF(ISPICKVAL( Users_Capable_of_Logging_in_Risk__c , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL( Users_Capable_of_Logging_in_Risk__c , &quot;Red&quot;), 1,0) + IF(ISPICKVAL( User_Training_Completed_Risk__c , &quot;Yellow&quot;), 1,0)+ IF(ISPICKVAL( User_Training_Completed_Risk__c , &quot;Red&quot;), 1,0) + IF(ISPICKVAL( WIP_Completed_Risk__c  , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL( WIP_Completed_Risk__c, &quot;Red&quot;), 1,0) + IF(ISPICKVAL( Conversion_Verified_Risk__c , &quot;Yellow&quot;), 1,0) + IF(ISPICKVAL(Conversion_Verified_Risk__c, &quot;Red&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Metrics at Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Narratives__c</fullName>
        <description>Field that rolls up the total number of daily narratives</description>
        <inlineHelpText>Automated rollup field</inlineHelpText>
        <label># of Narratives</label>
        <summaryForeignKey>Daily_Narrative__c.Associated_Trip_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_Users__c</fullName>
        <description>Field used to indicate the number of users in the department</description>
        <inlineHelpText>If you are the Install Lead, this is the total users in the department(s) you are leading.  If you are an Install Assist, this is the total users you are personally responsible to train.</inlineHelpText>
        <label>Total # of Users</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Report_Status__c</fullName>
        <label>Trip Report Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Training_Completed_Complete__c</fullName>
        <description>field used to indicate the percent complete for the deliverable</description>
        <inlineHelpText>Please select the appropriate percent compete for the deliverable</inlineHelpText>
        <label>User Training Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Training_Completed_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>User Training Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Capable_of_Logging_in_Complete__c</fullName>
        <description>Field to indicate the progress of the deliverable</description>
        <inlineHelpText>Please select the proper percent complete for the deliverable</inlineHelpText>
        <label>Users Capable of Logging in - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Capable_of_Logging_in_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Users Capable of Logging in - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_PercentComplete__c</fullName>
        <description>Picklist to show the completion percentage for the item indicated</description>
        <inlineHelpText>Please select your percent complete for WIP completed.</inlineHelpText>
        <label>WIP Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_RYG__c</fullName>
        <formula>IF(ISPICKVAL(WIP_Completed_Risk__c, &quot;RED&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAS&quot;, &apos;At Risk&apos;),  
IF(ISPICKVAL (WIP_Completed_Risk__c, &quot;YELLOW&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAT&quot;, &apos;Caution&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAR&quot;, &apos;On Target&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIP Completed RYG:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_Risk__c</fullName>
        <description>Field used to indicate the current risk status of the reported item</description>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>WIP Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>no_of_Onsite_Days__c</fullName>
        <description>Field used to indicate the number of days the associate is expected to be onsite</description>
        <inlineHelpText>Please enter the number of days that you are scheduled to be onsite for the install</inlineHelpText>
        <label># of Onsite Days</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trip Report</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 4 and (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Department__c</columns>
        <columns>BSC_Full_Name__c</columns>
        <columns>Trip_Report_Status__c</columns>
        <columns>Conversion_Verified_Risk__c</columns>
        <columns>DCS_3rd_Party_Comm_Verified_Risk__c</columns>
        <columns>Equipment_Verified_Risk__c</columns>
        <columns>Forms_Printers_Verified_Risk__c</columns>
        <columns>Manager_Training_Completed_Risk__c</columns>
        <columns>Setups_Verified_Risk__c</columns>
        <columns>User_Training_Completed_Risk__c</columns>
        <columns>WIP_Completed_Risk__c</columns>
        <columns>Agenda_Signed_Off_Risk__c</columns>
        <columns>Users_Capable_of_Logging_in_Risk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trip_Report__c.Install_Lead</value>
        </filters>
        <filters>
            <field>Metrics_Yellow__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Metrics_Red__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Project_Manager_for_SubProject__c</field>
            <operation>equals</operation>
            <value>kim kerr</value>
        </filters>
        <label>SH Trip Reports with Risks for PM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Trip_Reports1</fullName>
        <columns>NAME</columns>
        <columns>Dealership_Name_CMF__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Department__c</columns>
        <columns>Products_Installed__c</columns>
        <columns>Arrival_Start_Date_Time__c</columns>
        <columns>Departure_Finish_Date_Time__c</columns>
        <columns>Total_of_Users__c</columns>
        <columns>no_of_Onsite_Days__c</columns>
        <columns>Project_Manager_for_SubProject__c</columns>
        <columns>Client_Manager_for_the_SubProject__c</columns>
        <columns>Associate_s_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trip_Report_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Closed_Trip_Reports</fullName>
        <columns>NAME</columns>
        <columns>Dealership_Name_CMF__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Department__c</columns>
        <columns>Products_Installed__c</columns>
        <columns>Arrival_Start_Date_Time__c</columns>
        <columns>Departure_Finish_Date_Time__c</columns>
        <columns>Total_of_Users__c</columns>
        <columns>no_of_Onsite_Days__c</columns>
        <columns>Project_Manager_for_SubProject__c</columns>
        <columns>Client_Manager_for_the_SubProject__c</columns>
        <columns>Associate_s_Manager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Trip_Report_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed - Created by Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Open_Trip_Reports</fullName>
        <columns>NAME</columns>
        <columns>Dealership_Name_CMF__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Department__c</columns>
        <columns>Products_Installed__c</columns>
        <columns>Arrival_Start_Date_Time__c</columns>
        <columns>Departure_Finish_Date_Time__c</columns>
        <columns>Total_of_Users__c</columns>
        <columns>no_of_Onsite_Days__c</columns>
        <columns>Total_Number_of_Narratives__c</columns>
        <columns>Project_Manager_for_SubProject__c</columns>
        <columns>Client_Manager_for_the_SubProject__c</columns>
        <columns>Associate_s_Manager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Trip_Report_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open - Created by Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open1</fullName>
        <columns>NAME</columns>
        <columns>Dealership_Name_CMF__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Department__c</columns>
        <columns>Products_Installed__c</columns>
        <columns>Arrival_Start_Date_Time__c</columns>
        <columns>Total_of_Users__c</columns>
        <columns>no_of_Onsite_Days__c</columns>
        <columns>Project_Manager_for_SubProject__c</columns>
        <columns>Client_Manager_for_the_SubProject__c</columns>
        <columns>Associate_s_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trip_Report_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_Audit</fullName>
        <columns>NAME</columns>
        <columns>Dealership_Name_CMF__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Associate_s_Manager__c</columns>
        <columns>Total_Number_of_Narratives__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Trip_Report_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SubProject_Name__c</columns>
        <columns>SubProject_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Associate_s_Manager__c</field>
            <operation>contains</operation>
            <value>abbott</value>
        </filters>
        <label>Manager Audit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_Test_Trip_Reports_with_Risks</fullName>
        <booleanFilter>1 AND 4 and (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Department__c</columns>
        <columns>BSC_Full_Name__c</columns>
        <columns>Total_Metrics_at_Risk__c</columns>
        <columns>Conversion_Verified_Risk__c</columns>
        <columns>DCS_3rd_Party_Comm_Verified_Risk__c</columns>
        <columns>Equipment_Verified_Risk__c</columns>
        <columns>Forms_Printers_Verified_Risk__c</columns>
        <columns>Manager_Training_Completed_Risk__c</columns>
        <columns>Setups_Verified_Risk__c</columns>
        <columns>User_Training_Completed_Risk__c</columns>
        <columns>WIP_Completed_Risk__c</columns>
        <columns>Agenda_Signed_Off_Risk__c</columns>
        <columns>Users_Capable_of_Logging_in_Risk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trip_Report__c.Install_Lead</value>
        </filters>
        <filters>
            <field>Metrics_Yellow__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Metrics_Red__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Trip_Report_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Test Trip Reports with Risks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_Trip_Reports_with_Red_Risks_by_CM</fullName>
        <booleanFilter>1 AND 4 and (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Department__c</columns>
        <columns>BSC_Full_Name__c</columns>
        <columns>Trip_Report_Status__c</columns>
        <columns>Conversion_Verified_Risk__c</columns>
        <columns>DCS_3rd_Party_Comm_Verified_Risk__c</columns>
        <columns>Equipment_Verified_Risk__c</columns>
        <columns>Forms_Printers_Verified_Risk__c</columns>
        <columns>Manager_Training_Completed_Risk__c</columns>
        <columns>Setups_Verified_Risk__c</columns>
        <columns>User_Training_Completed_Risk__c</columns>
        <columns>WIP_Completed_Risk__c</columns>
        <columns>Agenda_Signed_Off_Risk__c</columns>
        <columns>Users_Capable_of_Logging_in_Risk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trip_Report__c.Install_Lead</value>
        </filters>
        <filters>
            <field>Metrics_Yellow__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Metrics_Red__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Client_Manager_for_the_SubProject__c</field>
            <operation>equals</operation>
            <value>cathy hayes</value>
        </filters>
        <label>SH Trip Reports with Risks for CM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SH_Trip_Reports_with_Red_Risks_by_PM</fullName>
        <booleanFilter>1 AND 4 and (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Department__c</columns>
        <columns>BSC_Full_Name__c</columns>
        <columns>Trip_Report_Status__c</columns>
        <columns>Conversion_Verified_Risk__c</columns>
        <columns>DCS_3rd_Party_Comm_Verified_Risk__c</columns>
        <columns>Equipment_Verified_Risk__c</columns>
        <columns>Forms_Printers_Verified_Risk__c</columns>
        <columns>Manager_Training_Completed_Risk__c</columns>
        <columns>Setups_Verified_Risk__c</columns>
        <columns>User_Training_Completed_Risk__c</columns>
        <columns>WIP_Completed_Risk__c</columns>
        <columns>Agenda_Signed_Off_Risk__c</columns>
        <columns>Users_Capable_of_Logging_in_Risk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trip_Report__c.Install_Lead</value>
        </filters>
        <filters>
            <field>Metrics_Yellow__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Metrics_Red__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Associate_s_Manager__c</field>
            <operation>equals</operation>
            <value>jeff abbott</value>
        </filters>
        <label>SH Trip Reports with Risks for BSC Mgr</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TripReport-{0000}</displayFormat>
        <label>Trip Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Reports</pluralLabel>
    <recordTypes>
        <fullName>Install_Assist</fullName>
        <active>true</active>
        <description>Record to be used when the associate is the install assist for a department(s) when filling out the Trip Report</description>
        <label>Install Assist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Install_Lead</fullName>
        <active>true</active>
        <description>Record to be used when the associate is the install lead for a department(s) when filling out the Trip Report</description>
        <label>Install Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_SubProject_Related</fullName>
        <active>true</active>
        <description>Record to be used when going to a Dealership site that is not associated to any SubProject work</description>
        <label>Non SubProject Related</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IMP_CMF_8Char</fullName>
        <active>true</active>
        <description>Require that the CMF field be a minimum of 8 characters</description>
        <errorConditionFormula>AND( RecordType.Name  = &quot;Non SubProject Related&quot;,OR(LEN( Dealership_CMF__c ) &lt;&gt; 8),NOT(ISBLANK(Dealership_CMF__c)))</errorConditionFormula>
        <errorDisplayField>Dealership_CMF__c</errorDisplayField>
        <errorMessage>The CMF must be numeric and contain 8 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IMP_Other_Product_Name_Required</fullName>
        <active>true</active>
        <description>Validation to enforce entry of a product name if Other is selected from the Product Installed picklist</description>
        <errorConditionFormula>AND(INCLUDES( Products_Installed__c , &quot;Other&quot;),ISBLANK( Other_Product_Names__c))</errorConditionFormula>
        <errorDisplayField>Other_Product_Names__c</errorDisplayField>
        <errorMessage>You selected &quot;other&quot; as a product installed. Please enter the name(s) for the product(s) you installed.....[IMP_Other_Product_Name_Required]</errorMessage>
    </validationRules>
</CustomObject>